# multipass_poc

./: .ansible-lint  .editorconfig  .gitignore  Dockerfile  README.md  ansible.cfg  ansible.cfg.example  cloud-init.yaml  cloud-init.yml  compose.yml  git.yml  hardening.yml  hello-world.yml  justfile  main-playbook.yml  pyproject.toml
cloud-init/: cloud-init.fedora.yml  cloud-init.microos.yml  cloud-init.ubuntu.yml  instance-data.json
jobs/: whalesay-job.yaml
kubevirt/: kubevirt.io.clearlinux.yml  kubevirt.io.fedora.yml  kubevirt.io.microos.yml
tasks/: ansible_facts.yml  create-keys-and-cloudinit.yml  delete-and-create-new-vm-tasks.yml  git.yml  hardening.yml  hello-world.yml  pkg.yml  user.yml
tasks/authorized_keys/: keys.json.example
templates/: cloud-init-template.j2
vars/: k3s-nodes.yml
